@@ -24,6 +24,12 @@
   tools:ignore="AlwaysShowAction">
 
   <item
+    android:id="@+id/action_product_overview"
+    android:title="@string/title_product_overview"
+    android:icon="@drawable/ic_round_info_outline_anim"
+    app:showAsAction="always" />
+
+  <item
     android:id="@+id/action_delete"
     android:title="@string/action_delete"
     android:icon="@drawable/ic_round_delete_anim"
