@@ -22,6 +22,7 @@
 - Improved: Misleading error when trying to save duplicated barcode on product barcode edit (#724)
 - Improved: Message shown when product or recipe is not on server (#718)
 - Improved: Pictures optimized & added pictures to product bottom sheet and recipe page (#536)
+- Improved: On recipe ingredient edit page, product overview sheet now can be displayed
 - Improved: Horizontal actions layout on overview page for smaller screens
 - Fixed: Long click on barcode button on overview page was broken on Android Nougat and lower
 - Fixed: Crash on startup with Android Lollipop (and maybe higher)
